fixed svg links

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <div class="app">
         <div class="panel">
-            <img class="logo" src="/images/logo.svg" alt="logo habbit app" />
+            <img class="logo" src="./images/logo.svg" alt="logo habbit app" />
             <div class="menu">
                 <div class="menu__list">
                     
                 </div>
                 <button class="menu__add" onclick="togglePopup()">
-                    <img src="/images/add.svg" alt="add habbit">
+                    <img src="./images/add.svg" alt="add habbit">
                 </button>
             </div>
         </div>
